--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-
-<h1>Start Framework</h1>
+	
+<h1 align="center">Start Framework</h1>
 
 	<section id="grids">
 		<h1>The Grid</h1>
@@ -62,15 +62,23 @@
 	    </section>
 	</section>
 	<section id="buttons">
-		<button class="btn btn--ghost">btn--ghost</button>
+		<h2>Buttons</h2>
+		<div class="grid">
+			<div class="col-12"><button class="btn btn--ghost">btn--ghost</button></div>
+			<div class="col-4"><button class="btn btn--small">btn--small</button></div>
+			<div class="col-4"><button class="btn btn--medium">btn--medium</button></div>
+			<div class="col-4"><button class="btn btn--large">btn--large</button></div>
+			<div class="col-4"><button class="btn btn--medium rounded">btn--rounded</button></div>
+			<div class="col-4"><button class="btn btn--secondary">btn--secondary</button></div>
+			<div class="col-4"><button class="btn btn--alert">btn--alert</button></div>
+		</div>
+		
 		<section>
-		<button class="btn btn--small">btn--small</button>
-		<button class="btn btn--medium">btn--medium</button>
-		<button class="btn btn--large">btn--large</button>
+		
 		</section>
-		<button class="btn btn--medium rounded">btn--rounded</button>
-		<button class="btn btn--secondary">btn--secondary</button>
-		<button class="btn btn--alert">btn--alert</button>
+		
+		
+		
 	</section>
 	<section id="fields" class="grid">
 		<h2>Form elements</h2>
@@ -92,12 +100,10 @@
 		<label for="input4">Label_5</label>
 		<input type="text" id="input4" class="rounded" placeholder="Placeholder" size="35">
 
-
 		<label for="textarea2">Label_6</label>
 		<textarea type="text" id="textarea2" class="rounded" placeholder="Placeholder" size="35"></textarea>
 
 		</div>
-
 
 		<div id="block3" class="col-4">
 			<label for="input5">Label_7</label>
@@ -121,7 +127,6 @@
 		</div>
 		
 	</section>
-	
 	
 	<section id="lists">
 		<div class="wrap">
@@ -152,7 +157,7 @@
 		
 	</section>
 	<section id="typography">
-		<div class="wrap">
+		<div class="left wrap">
 		<h1>Heading h1</h1>
 		<span>3em</span>
 		<h2>Heading h2</h2>
