adjust color buttons

--- a/form.html
+++ b/form.html
@@ -23,12 +23,11 @@
 
   <label for="phone"><strong>Phone</strong></label>
   <input name="phone" type="tel" id="phone" placeholder="Phone number" size="9"/>
-
     <label for="message"><strong>Message</strong></label>
     <textarea name="message" placeholder="Your message" id="message"></textarea>
   <p>
-    <input type="reset" name="button" id="button" value="Reset" class="btn"/>
-    <input type="submit" name="button2" id="button2" value="Submit Form" class="btn" />
+    <a href="javascript:document.getElementById('form1').reset();"  >Reset</a>
+    <input type="submit" name="button2" id="button2" value="Submit Form" class="btn btn--medium" />
   </p>
   </div>
 </form>
