--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <h1 align="center">Start Framework</h1>
 
 	<section id="grids">
-		<h1>The Grid</h1>
+		<h2>The Grid</h2>
 		<section class="grid boxed">
 	      <div class="col-1">.col-1</div>
 	      <div class="col-11">.col-11</div>
@@ -39,7 +39,7 @@
 	    </section>
 
 	    <section class="grid boxed">
-	      <h2>Example 1</h2>
+	      <h3>Example 1</h3>
 	      <div class="col-4">.col-4</div>
 	      <div class="col-4">.col-4</div>
 	      <div class="col-4">.col-4</div>
@@ -49,7 +49,7 @@
 	      <div class="col-3">.col-3</div>
 	    </section>
 	    <section class="grid boxed">
-	      <h2>Example 2 Nested</h2>
+	      <h3>Example 2 Nested</h3>
 	      <div class="col-2">.col-2</div>
 	      <div class="col-2">.col-2</div>
 	      <div class="col-2">
@@ -74,7 +74,6 @@
 		</div>
 		
 		<section>
-		
 		</section>
 		
 
@@ -86,7 +85,7 @@
 		<input type="text" id="input1" placeholder="Placeholder">
 
 		<label for="input2">Label_2</label>
-		<input type="text" id="input2" placeholder="Placeholder" size="35">
+		<input type="text" id="input2" placeholder="Placeholder" size="30">
 
 		<label for="textarea1">Label_3</label>
 		<textarea type="text" id="textarea1" placeholder="Placeholder" ></textarea>
@@ -97,10 +96,10 @@
 		<input type="text" id="input3" class="rounded" placeholder="Placeholder">
 
 		<label for="input4">Label_5</label>
-		<input type="text" id="input4" class="rounded" placeholder="Placeholder" size="35">
+		<input type="text" id="input4" class="rounded" placeholder="Placeholder" size="30">
 
 		<label for="textarea2">Label_6</label>
-		<textarea type="text" id="textarea2" class="rounded" placeholder="Placeholder" size="35"></textarea>
+		<textarea type="text" id="textarea2" class="rounded" placeholder="Placeholder"></textarea>
 
 		</div>
 
@@ -129,7 +128,7 @@
 	
 	<section id="lists">
 		<div class="wrap">
-			<h1>Lists</h1>
+			<h2>Lists</h2>
 			<div class="col-4">
 			<ul>
 				<li>First list option</li>
@@ -180,7 +179,7 @@
 <section id="form"></section>
 	<section id="table">
 		<div class="wrap">
-			<h1>Table</h1>
+			<h2>Table</h2>
 		<table>
 			<thead>
 				<tr>
