added icon font

--- a/index.html
+++ b/index.html
@@ -73,9 +73,6 @@
 			<div class="col-4"><button class="btn btn--alert">btn--alert</button></div>
 		</div>
 		
-		<section>
-		</section>
-		
 
 	</section>
 	<section id="fields" class="grid">
@@ -176,7 +173,7 @@
 		<div class="alert alert--error">Wrong! Alert message ERROR</div>
 	</div>
 </section>
-<section id="form"></section>
+
 	<section id="table">
 		<div class="wrap">
 			<h2>Table</h2>
@@ -218,6 +215,26 @@
 		</table>
 		</div>
 		
+	</section>
+	<section id="icons">
+		<h2>Icons</h2>
+		<p>I use <a href="https://icomoon.io/" target="_blank">icomoon</a> for create the font</p>
+		<div class="grid">
+			<div class="col-3"><span class="icon-home"></span> .icon-home</div>
+			<div class="col-3"><span class="icon-phone"></span> .icon-phone</div>
+			<div class="col-3"><span class="icon-location"></span> .icon-location</div>
+			<div class="col-3"><span class="icon-user"></span> .icon-user</div>
+			<div class="col-3"><span class="icon-mail"></span> .icon-mail</div>
+			<div class="col-3"><span class="icon-bubbles"></span> .icon-bubbles</div>
+			<div class="col-3"><span class="icon-checkmark"></span>.icon-checkmark</div>
+			<div class="col-3"><span class="icon-close"></span> .icon-close</div>
+		</div>
+	</section>
+	<section id="social">
+		<h4>Social icons</h4>
+			<div class="col-4 bg-twitter"><span class="icon-twitter"></span> .icon-twitter</div>
+			<div class="col-4 bg-facebook"><span class="icon-facebook"></span> .icon-facebook</div>
+			<div class="col-4 bg-googleplus"><span class="icon-googleplus"></span> .icon-googleplus</div>
 	</section>
 	
 </body>
