--- a/form.html
+++ b/form.html
@@ -16,15 +16,15 @@
   <form id="form1" name="form1" method="post" action="">
   <div class="wrap">
     <label for="name"><strong>Name</strong></label>
-  <input type="text" name="name" id="name" placeholder="Your name"  />
+  <input type="text" name="name" id="name" placeholder="Your name"  class="full"/>
 
   <label for="email"><strong>E-Mail <span class="required">*</span></strong></label>
-  <input type="text" name="email" id="email" placeholder="name@domain.com" required />
+  <input type="text" name="email" id="email" placeholder="name@domain.com" required  class="full"/>
 
   <label for="phone"><strong>Phone</strong></label>
-  <input name="phone" type="tel" id="phone" placeholder="Phone number" size="9"/>
+  <input name="phone" type="tel" id="phone" placeholder="Phone number" size="9" />
     <label for="message"><strong>Message</strong></label>
-    <textarea name="message" placeholder="Your message" id="message"></textarea>
+    <textarea name="message" placeholder="Your message" id="message" class="full"></textarea>
   <p>
     <a href="javascript:document.getElementById('form1').reset();"  >Reset</a>
     <input type="submit" name="button2" id="button2" value="Submit Form" class="btn btn--medium" />
